--- a/styles.css
+++ b/styles.css
@@ -283,6 +283,7 @@ footer {
 #Intro {
     display: flex;
     margin-top: 2.5%;
+    padding: 65px;
 }
 
 #introduction {
@@ -318,6 +319,7 @@ footer {
     margin-top: 2.5%;
     max-width: 100%;
     gap: 10px;
+    padding: 50px;
 }
 
 #impacts {
