--- a/styles.css
+++ b/styles.css
@@ -534,6 +534,10 @@ footer {
   transform: translateX(175px);
 }
 
+#email-login input {
+    font-size: 1.20em; 
+}
+
 #senha-login {
     text-align: center;
 }
@@ -545,6 +549,10 @@ footer {
   margin-bottom: 5px;
   text-align: left;
   transform: translateX(175px);
+}
+
+#senha-login input {
+    font-size: 1.20em; 
 }
 
 #buttons-login-cad {
@@ -573,6 +581,8 @@ footer {
   cursor: pointer;
   transition: 0.3s;
   background-color:rgb(233, 205, 135);
+  text-decoration: none;
+  color: #000;
 }
 
 #login-button:hover {
@@ -614,7 +624,46 @@ footer {
     font-size: 1.05rem;
 }
 
+#cad-senha {
+  font-size: 1.25rem;
+  color: #555;
+  display: block;
+  margin-bottom: 5px;
+  text-align: left;
+  transform: translateX(175px);
+}
 
+#cad-email {
+  font-size: 1.25rem;
+  color: #555;
+  display: block;
+  margin-bottom: 5px;
+  text-align: left;
+  transform: translateX(175px);
+font-size: 1.5em;
+}
+
+.email input {
+    font-size: 1.5em; 
+}
+
+.senha input {
+    font-size: 1.5em; 
+}
+
+#cadbody::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('images/conversa.png');
+    background-size: cover;
+    background-position: center;
+    opacity: 0.5; /* Ajuste a opacidade do fundo */
+    z-index: -1;  /* Fica atrás do conteúdo */
+}
 
 @media screen and (max-width:1450px) {
     .Lixo_Eletronico > .carousel-container{
@@ -691,6 +740,10 @@ footer {
     max-width: 100%;
     transform: translateX(0px);
     }
+
+    .image-panel img {
+        display: hidden
+    }
 }
 
 @media (max-width: 768px) {
@@ -701,5 +754,23 @@ footer {
 
   .info-panel {
     height: 200px;
+  }
+
+  .login-email {
+    text-align: center;
+  }
+
+  .image-panel {
+    display: none;
+  }
+
+  #email-login label {
+    text-align: center;
+    transform: translateX(0px);
+  }
+
+  #senha-login label {
+    text-align: center;
+    transform: translateX(0px);
   }
 }
