--- a/styles.css
+++ b/styles.css
@@ -680,7 +680,10 @@ footer {
     z-index: -1;  
 }
 
-
+#referencia {
+    border-radius: 10px;
+    background-color: var(--color-primary-13);
+}
 
 @media screen and (max-width:1450px) {
     .Lixo_Eletronico > .carousel-container{
