--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,8 @@
     --color-primary-8: #7b7b7b; /* copyright footer */
     --color-primary-9: #dddddd; /* link a footer */
     --color-primary-10: #222; /* footer */
-    --color-primary-11: #e8a100; /*multiplo uso (porquê eu quero kkkk)*/
-    --color-primary-12: #fff3d6; /*cor suave combinante com o body */
+    --color-primary-11: #e8a100; /*multiplo uso*/
+    --color-primary-12: #fff3d6; /*cor suave parecida com o body */
     --color-primary-13:rgb(255, 234, 176);
 
     --color-neutral-0: #fff;    /* box mid*/
@@ -106,6 +106,10 @@ header {
 }
 
 .nav-item.active a {
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 3px;
     color: var(--color-neutral-1);
     border-bottom: 3px solid var(--color-primary-4);
 }
@@ -326,12 +330,21 @@ footer {
     justify-self: center;
 }
 
+#intro_image {
+    display: flex;
+    position: relative;
+    right: 125px;
+    top: 35px;
+    margin: 3px;
+}
+
 .Impactos {
     display: flex;
     margin-top: 2.5%;
     max-width: 100%;
     gap: 10px;
     padding: 50px;
+    margin: 50px;
 }
 
 #impacts {
@@ -502,17 +515,19 @@ footer {
     gap: 10px;
     background-color: var(--color-primary-12);
     border-radius: 15px;
+    margin: 50px;
 }
 
 .Lei_Vigente {
     display: flex;
-    margin-top: 3%;
+    margin-top: 45px;
     max-width: 100%;
     margin-right: 30px;
     margin-left: 30px;
     gap: 10px;
     background-color: var(--color-primary-12);
     border-radius: 15px;
+    margin: 45px;
 }
 
 #outros_title {
