--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,10 @@
    box-sizing: border-box;
 }
 
+html, body {
+    overflow-x: hidden;
+}
+
 body {
     background-color: var(--color-primary-1);
 }
