--- a/style_party.css
+++ b/style_party.css
@@ -1,10 +1,14 @@
 body {
-    margin: 0%;
+    margin: 0;
     background: #fff9e6;
 }
 .navbar {
     display: block; 
     background-color: transparent;
+}
+
+.navbar > a > i {
+  text-align: center;
 }
 
 .titulo {
@@ -15,6 +19,22 @@ body {
     font-family: "Lilita One", sans-serif;
   font-weight: 400;
   font-style: normal;
+  margin-top:40px;
+  margin-bottom: 40px;
+  margin-left: 360px;
+  margin-right: 360px;
+}
+
+#joke {
+  color: #f5f5f5;
+  margin-left: 950px;
+  margin-right: 950px;
+}
+
+#joke:hover {
+  color: #e8a100;
+  transform: scale(1.05);
+  cursor: pointer; 
 }
 
   .participants {
