--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,20 @@ section {
     transition: .3s ease;
 }
 
+#btn-translate {
+    border: none;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--color-primary-5);
+    color: var(--color-primary-2);
+    border-radius: 12px;
+    padding: 10px 14px;
+    font-weight: 600;
+    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: .3s ease;
+}
+
 .btn-default:hover {
     background-color: var(--color-primary-3);
 }
@@ -522,11 +536,11 @@ footer {
     background: rgba(0, 0, 0, 0.5);
     color: white;
     border: none;
-    padding: 0.75rem;
+    padding: 0.5rem;
     cursor: pointer;
-    border-radius: 20px;
+    border-radius: 15px;
     z-index: 10;
-    font-size: 1.5rem;
+    font-size: 1.05rem;
 }
 
 .prev {
