--- a/styles_refe.css
+++ b/styles_refe.css
@@ -23,3 +23,8 @@ body {
 .texto_bl p {
     transform: translateX(25px);
 }
+
+#xnav-logo:hover {
+  filter: brightness(1.05);
+  text-shadow: 2px 2px 10px rgb(255, 229, 84);
+}
