--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,12 @@ section {
     font-size: 1.563rem;
 }
 
+#important-span {
+    text-decoration: underline;
+    text-decoration-thickness: 2px;
+    text-decoration-color: var(--color-primary-3);
+}
+
 header {
     width: 100%;
     padding: 28px 8%;
