--- a/style_re.css
+++ b/style_re.css
@@ -24,10 +24,12 @@
     
     a {
         text-decoration: none;
+        transition: background-color 0.3s, transform 0.3s;
     }
     a:hover {
         filter: brightness(1.05);
         text-shadow: 2px 2px 10px rgb(255, 229, 84);
+        transform: scale(1.05);
     }
 
     header .logo {
@@ -49,8 +51,8 @@
     }
     
     nav button:hover {
-       color: gold;
-      transform: scale(1.05);
+      color: #ffcb45;
+      transform: scale(1.10);
     }
     
     .content {
